- mask's right sidebar is now shown correctly
- P4A_Mask::setLeftSidebarWidth(), setRightSidebarWidth(),
  getLeftSidebarWidth() and getRightSidebarWidth() methods were added
- focus internal management was rewritten
- jQuery::form was updated to 2.43
- jQuery was updated to 1.4.2
- pt_BR translation was added to products_catalogue sample application
  (thanks to Cassiano Faria)

3.4.4
- Zend Framework was updated to 1.10.1
- P4A_Data_Source::exportToCSV() method was marked as deprecated
- P4A_Data_Source::exportAsCSV() now can be called directly from an event handler
- translations were updated

3.4.3
- Zend Framework was updated to 1.9.5
- jQuery::form was updated to 2.36
- tooltip javascript was enhanced to make it location aware (bug #1908495)
- setTooltip() methods were moved to P4A_Widget
- tooltip support was added to P4A_Tab_Pane
- PEAR::Net_Useragent_Detect was updated to 2.5.1
- tooltips hiding methods now have a timeout to allow clicking links inside the
  tooltip itself
- new_window parameter was added to P4A_Redirect_To_File() and P4A_Redirect_To_Url()
  global functions
- P4A_DB_Source::_composePkString() was fixed handling multiple primary keys
  (bug #2833159)
- onautocomplete event was added, it can be used to create a custom search for
  fields instead of using P4A's default one
- P4A_DB_Source::setTable() now supports a second parameter "alias"
- P4A_DB_Source::setTableAlias() and getTableAlias() methods were added
- P4A_DB_Source::addJoin*() methods now support alias on table (see code reference)
- P4A_Table elements/page user selector was added (disabled by default)
- P4A_Table::showElementsOnPageBar() and P4A_Table::hideElementsOnPageBar() were added

3.4.2
- a bug with backslashes stripping was solved (bug #2853694)
- a typo was fixed in P4A_DB (profiler activation)
- P4A_Tab_Pane now correctly handles disabled pages
- a bug with P4A_Table's ordering with P4A_DB_Source having a group clause was solved
- Zend Framework was updated to 1.9.4