@@ -19,6 +19,8 @@
 - jQuery was updated to 1.4.2
 - pt_BR translation was added to products_catalogue sample application
   (thanks to Cassiano Faria)
+- es_MX translation was added to products_catalogue sample application
+  (thanks to Edgar Joel)
 
 3.4.4
 - Zend Framework was updated to 1.10.1
